fix: overflow footer

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,7 +5,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: auto;
 
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .fondoGris{
